website main page name changed to index.html

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="navbar">
-    <a href="new_home.html"><img src="images/logo.png" class="logo"></a>
+    <a href="index.html"><img src="images/logo.png" class="logo"></a>
     <ul class="list1">
 
       <li><a href="introduction.html">Introduction</a></li>
