--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="banner">
         <div class="navbar">
-            <a href="new_home.html"><img src="gourav_new_folder/best.png" class="logo"></a>
+            <a href="index.html"><img src="gourav_new_folder/best.png" class="logo"></a>
             <ul>
                 <li><a href="introduction.html">Introduction</a></li>
                 <li><a href="Tech_Behind.html">Tech Behind</a></li>
